Fix: history 수정

--- a/.gitignore
+++ b/.gitignore
@@ -25,6 +25,10 @@ application.yml
 application.properties
 *.properties
 
+### .json ###
+serviceAccountKey.json
+*.json
+
 ### .txt ###
 devLog.txt
 *.txt
