Fix: devLog.txt 추가

--- a/.gitignore
+++ b/.gitignore
@@ -30,8 +30,11 @@ serviceAccountKey.json
 *.json
 
 ### .txt ###
-devLog.txt
-*.txt
+#devLog.txt
+#*.txt
+
+### .pem ###
+*.pem
 
 ### IntelliJ IDEA ###
 .idea
