Add: FriendService 추가

--- a/build.gradle
+++ b/build.gradle
@@ -43,13 +43,13 @@ dependencies {
 	implementation group: 'com.google.firebase', name: 'firebase-admin', version: '8.1.0'
 
 	// swagger 의존성 추가
-//	implementation (group: 'io.springfox', name: 'springfox-swagger2', version: '2.9.2'){
-//		exclude module: 'swagger-annotations' exclude module: 'swagger-models'
-//	}
-//	implementation "io.swagger:swagger-annotations:1.5.21"
-//	implementation "io.swagger:swagger-models:1.5.21"
-//	implementation group: 'io.springfox', name: 'springfox-swagger-ui', version: '2.9.2'
-	implementation group: 'io.springfox', name: 'springfox-boot-starter', version: '3.0.0'
+	implementation (group: 'io.springfox', name: 'springfox-swagger2', version: '2.9.2'){
+		exclude module: 'swagger-annotations' exclude module: 'swagger-models'
+	}
+	implementation "io.swagger:swagger-annotations:1.5.21"
+	implementation "io.swagger:swagger-models:1.5.21"
+	implementation group: 'io.springfox', name: 'springfox-swagger-ui', version: '2.9.2'
+	//implementation group: 'io.springfox', name: 'springfox-boot-starter', version: '3.0.0'
 }
 
 tasks.named('test') {
